--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,7 @@
 <h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<p>
+    To get help on the Ruby on Rails Tutorials, go to 
+    <a href="http://www.railstutorial.org/help"> Ruby on Rails Tutorials help page</a>
+    To get help on the sample app, read the book at 
+    <a href="http://www.railstutorial.org/book"> Ruby on Rails Tutorials </a>
+</p>
