--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,7 +1,10 @@
-<h1>StaticPages#help</h1>
+<% provide(:title, "Help")%>
+<h1>Help</h1>
 <p>
-    To get help on the Ruby on Rails Tutorials, go to 
-    <a href="http://www.railstutorial.org/help"> Ruby on Rails Tutorials help page</a>
-    To get help on the sample app, read the book at 
-    <a href="http://www.railstutorial.org/book"> Ruby on Rails Tutorials </a>
+    Get help on the Ruby on Rails Tutorial at the
+    <a href="http://www.railstutorial.org/help">Rails Tutorial help
+    section</a>.
+    To get help on this sample app, see the
+    <a href="http://www.railstutorial.org/book"><em>Ruby on Rails
+    Tutorial</em> book</a>.
 </p>
