--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-      <%= link_to("sample app", '#', id: 'logo')  %>
+      <%= link_to("sample app", '#', class:'navbar-brand')  %>
       <ul class="nav navbar-nav navbar-right">
         <li class="nav-item"> <%= link_to("Home", "#", class:'nav-link')%></li>
         <li class="nav-item"><%= link_to("Help", "#", class:'nav-link')%></li>
