--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,5 +7,7 @@
         sample application.
     </p>
     <%= link_to("Sign up", "#", class: 'btn btn-primary')%>
+    <br> <br>
+    <%= link_to image_tag("rails.png", alt: "Rails logo"),'/app/assets/images' %>
 </div>
 </body>
