--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,7 @@
         <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
         sample application.
     </p>
-    <%= link_to("Sign up", "#", class: 'btn btn-primary')%>
+    <%= link_to("Sign up", "#", class: 'btn btn-lg btn-primary center')%>
     <br> <br>
     <%= link_to image_tag("rails.png", alt: "Rails logo"),'/app/assets/images' %>
 </div>
