--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,5 +1,7 @@
 @import "bootstrap";
 
+$light-gray: #777;
+
 // universal 
 .center
 {
@@ -22,7 +24,7 @@ h2
     margin-bottom: 5px;
     text-align: center;
     font-weight: normal;
-    color: #777;
+    color: $light-gray;
 }
 
 p
@@ -38,43 +40,43 @@ p
     float: left;
     margin-right: 30px;
     font-size: 2em;
-    color: #777;
+    color: $light-gray;
     text-transform: uppercase;
     font-weight: bold;
-}
-
-#logo:hover
-{
-    color: white;
+    &:hover
+    {
+        color: white;
+    }
 }
 //footer
 .footer
 {
     margin: 30px 5% 0 5%;
     padding: 10px 0 10px 0;
-    // color: #777;
+    // color: $light-gray;
     height: 100%;
+    a
+    {
+        color: #555;
+        text-decoration: none;
+    }
+    &:hover
+    {
+        color: #222;
+    }
+    small
+    {
+        float: left;
+    }
+    ul
+    {
+        float: right;
+        list-style-type: none;
+        li
+        {
+            float: left;
+            margin-left: 10px;
+        }
+    }
 }
-.footer a
-{
-    color: #555;
-    text-decoration: none;
-}
-footer a:hover
-{
-    color: #222;
-}
-footer small
-{
-    float: left;
-}
-footer ul
-{
-    float: right;
-    list-style-type: none;
-}
-footer ul li
-{
-    float: left;
-    margin-left: 10px;
-}
+
