--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <%= link_to("sample app", '#', class:'navbar-brand', id: 'logo')  %>
     <ul class="nav navbar-nav navbar-right">
-    <li class="nav-item"> <%= link_to("Home", "#", class:'nav-link')%></li>
-    <li class="nav-item"><%= link_to("Help", "#", class:'nav-link')%></li>
-    <li class="nav-item"><%= link_to("About", "#", class:'nav-link')%></li>
+    <li class="nav-item"> <%= link_to "Home", root_path, class:'nav-link' %></li>
+    <li class="nav-item"><%= link_to "Help", help_path, class:'nav-link' %></li>
+    <li class="nav-item"><%= link_to "About", about_path, class:'nav-link' %></li>
     </ul>
 </nav>
