--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -83,4 +83,19 @@ p
         }
     }
 }
+// debug
+@mixin box_sizing 
+{
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.debug_dump
+{
+    clear: both;
+    width: 100%;
+    float: left;
+    @include box_sizing();
+}
 
