--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,14 @@
-<%= @user.name%>, <%= @user.email%>
-View at:
-<%= Time.now%>
+<% provide(:title, @user.name)%>
+<div class="container">
+    <div class="row">
+        <aside class="col-md-4">
+            <section class="user_info">
+                <h1>
+                    <%= gravatar_for @user%>
+                    <%= @user.name%>
+                </h1>
+            </section>
+        </aside>
+    </div>
+</div>
+
