--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -94,10 +94,10 @@ p
 .debug_dump
 {
     clear: both;
-    width: 100%;
     float: left;
-    margin-top: 50px;
-    @include box_sizing();
+    width: 100%;
+    margin-top: 45px;
+    @include box_sizing;
 }
 
 // show user view
@@ -126,5 +126,15 @@ aside
     margin-right: 10px;
 }
 
+// signup form
 
-
+#error_explanation 
+{
+    color: red;
+    ul 
+    {
+        color: red;
+        margin: 0 0 30px 0;
+        list-style-type: none;
+    }
+}
