--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,14 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
+      <% flash.each do |message_type, message| %>
+        <div class='alert alert-<%= message_type %>' role='alert'>
+          <%= message %>
+        </div>
+      <% end %>
       <%= yield %>
+      <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
     </div>
-    <%= render 'layouts/footer' %>
   </body>
 </html>
