--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -126,8 +126,8 @@ aside
     margin-right: 10px;
 }
 
-// signup form
-
+// error
+    // in sign up form
 #error_explanation 
 {
     color: red;
@@ -137,4 +137,9 @@ aside
         margin: 0 0 30px 0;
         list-style-type: none;
     }
+}
+
+.alert
+{
+    margin-top: 40px;
 }
