--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,5 +4,18 @@
     <li class="nav-item"> <%= link_to "Home", root_path, class:'nav-link' %></li>
     <li class="nav-item"><%= link_to "Help", help_path, class:'nav-link' %></li>
     <li class="nav-item"><%= link_to "About", about_path, class:'nav-link' %></li>
-    </ul>
+    <% if logged_in? %>
+        <li class="nav-item"><%= link_to "User", "#", class:'nav-link' %></li>
+        <li class="nav-item dropdown" >
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Account </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <%= link_to "Profile", current_user, class:'dropdown-item' %>
+                <%= link_to "Settings", "#", class:'dropdown-item' %>
+                <div class="divider"></div>
+                <%= link_to "Logout", logout_path, class:'dropdown-item', method:'delete' %>
+            </div>
+        </li>
+    <% else %>
+        <li class="nav-item"> <%= link_to "Login", login_path, class:'nav-link' %> </li>
+    <% end %>
 </nav>
