--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Account </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <%= link_to "Profile", current_user, class:'dropdown-item' %>
-                <%= link_to "Settings", "#", class:'dropdown-item' %>
+                <%= link_to "Settings", edit_user_path(current_user), class:'dropdown-item' %>
                 <div class="divider"></div>
                 <%= link_to "Logout", logout_path, class:'dropdown-item', method:'delete' %>
             </div>
