--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,32 +1,10 @@
 <% provide(:title, "Sign Up")%>
+<% provide(:button_title, "Create account")%>
 <h1>Sign up</h1>
 <div class=container>
     <div class="row">
         <div class="col-md-6 offset-md-3">
-            <%= form_for(@user) do |f| %>
-            <%= render 'shared/error_messages' %>
-            <div class="form-group">
-                <%= f.label :name%>
-                <%= f.text_field :name, class:'form-control' %>
-            </div>
-
-            <div class="form-group">
-                <%= f.label :email%>
-                <%= f.text_field :email, class:'form-control' %>
-            </div>
-
-            <div class="form-group">
-                <%= f.label :password%>
-                <%= f.password_field :password, class:'form-control' %>
-            </div>
-
-            <div class="form-group">
-                <%= f.label :password_confirmation%>
-                <%= f.password_field :password_confirmation, class:'form-control' %>
-            </div>
-
-            <%= f.submit "Create account", class:'btn btn-primary'%>
-            <% end %>
+            <%= render 'users/form'%>
         </div>
     </div>
 </div>
