--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -143,3 +143,15 @@ aside
 {
     margin-top: 40px;
 }
+
+// users list
+.users
+{
+    list-style-type: none;
+    li
+    {
+        overflow: auto;
+        padding: 10px 0;
+        border-bottom: 1px solid gray;
+    }
+}
