--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
     <li class="nav-item"><%= link_to "Help", help_path, class:'nav-link' %></li>
     <li class="nav-item"><%= link_to "About", about_path, class:'nav-link' %></li>
     <% if logged_in? %>
-        <li class="nav-item"><%= link_to "User", "#", class:'nav-link' %></li>
+        <li class="nav-item"><%= link_to "Users", users_url, class:'nav-link' %></li>
         <li class="nav-item dropdown" >
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Account </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
