--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,3 +1,5 @@
-User#password_reset
-
-<%= @greeting %>, find me in app/views/user_mailer/password_reset.text.erb
+Click this link below to reset your password: 
+<%= edit_password_reset_url(@user.pw_reset_token, email: @user.email)%>
+This link will expire in two hours.
+If you did not request your password to be reset, please ignore this email
+and your password will stay as it is.
