--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -104,7 +104,7 @@ p
 
 aside
 {
-    section.user_info
+    section.user-info
     {
         margin-top: 50px;
     }
@@ -123,7 +123,7 @@ aside
 .gravatar
 {
     float: left;
-    margin-right: 10px;
+    margin-right: 20px;
 }
 
 // error
@@ -158,4 +158,65 @@ aside
 .delete-link
 {
     float:right;
+}
+aside 
+{
+    textarea 
+    {
+        height: 100px;
+        margin-bottom: 5px;
+    }
+}
+span.picture 
+{
+    margin-top: 10px;
+    input 
+    {
+        border: 0;
+    }
+}
+// microposts list
+.user-posts
+{
+    margin-top: 50px;
+    padding: 10px 0;
+    margin: 10px 0;
+    h3
+    {
+        font-size: 1.4 em;
+        text-align: left;
+    }
+}
+.microposts
+{
+    list-style-type: none;
+    padding: 0;
+    li
+    {
+        overflow: auto;
+        padding: 10px 0;
+        border-bottom: 1px solid gray;
+    }
+    .user
+    {
+        padding-top: 0;
+        margin-top: 2px;
+    }
+    .gravatar
+    {
+        float: left;
+        margin-top: 5px;
+        margin-right: 10px;
+    }
+    .content
+    {
+        margin-left: 60px;
+        display: block;
+    }
+    .time
+    {
+        margin-left: 60px;
+        display: block;
+        color: gray;
+    }
 }
