--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -6,5 +6,8 @@
     <br>
     <span class="content"><%= micropost.content %></span>
     <br>
-    <span class="time"> Posted <%= time_ago_in_words(micropost.created_at)%> ago </span> 
+    <span class="time"> Posted <%= time_ago_in_words(micropost.created_at)%> ago </span>
+    <% if current_user == micropost.user %>
+        <%= link_to "Delete", micropost_path(micropost),  method: :delete, data: {confirm: "Are you sure you want to delete that post"}, class: 'delete-link'%>
+    <% end %>
 </li>
