--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -4,7 +4,11 @@
     <br>
     <span class="user"><%= link_to user.name, user_url(user) %></span>
     <br>
-    <span class="content"><%= micropost.content %></span>
+    <span class="content">
+        <%= micropost.content %>
+        <br>
+        <%= image_tag micropost.picture.url if micropost.picture? %>
+    </span>
     <br>
     <span class="time"> Posted <%= time_ago_in_words(micropost.created_at)%> ago </span>
     <% if current_user == micropost.user %>
