--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -100,7 +100,7 @@ p
     @include box_sizing;
 }
 
-// show user view
+// side column in user profile and home
 
 aside
 {
@@ -118,6 +118,11 @@ aside
             text-align: left;
         }
     }
+    textarea 
+    {
+        height: 100px;
+        margin-bottom: 5px;
+    }
 }
 
 .gravatar
@@ -125,6 +130,59 @@ aside
     float: left;
     margin-right: 20px;
 }
+
+span.picture 
+{
+    margin-top: 10px;
+    input 
+    {
+        border: 0;
+    }
+}
+.stats 
+{
+    overflow: auto;
+    margin-top: 0;
+    padding: 0;
+    a 
+    {
+        float: left;
+        padding: 0 10px;
+        border-left: 1px solid gray;
+        color: gray;
+        &:first-child 
+        {
+            padding-left: 0;
+            border: 0;
+        }
+        &:hover 
+        {
+            text-decoration: none;
+            color: blue;
+        }
+    }
+    strong 
+    {
+        display: block;
+    }
+}
+    .user_avatars 
+    {
+        overflow: auto;
+        margin-top: 10px;
+        .gravatar 
+        {
+            margin: 1px 1px;
+        }
+        a 
+        {
+            padding: 0;
+        }
+    }
+    .users.follow 
+    {
+        padding: 0;
+    }
 
 // error
     // in sign up form
@@ -159,22 +217,7 @@ aside
 {
     float:right;
 }
-aside 
-{
-    textarea 
-    {
-        height: 100px;
-        margin-bottom: 5px;
-    }
-}
-span.picture 
-{
-    margin-top: 10px;
-    input 
-    {
-        border: 0;
-    }
-}
+
 // microposts list
 .user-posts
 {
